...
                      });
                    },
                  ),
                  DropdownButton<String>(
                    value: selectedStatus,
                    hint: Text('Select Status'),
                    items: ['Available', 'Pledged']
                        .map((status) => DropdownMenuItem<String>(
                      value: status,
                      child: Text(status),
                    ))
                        .toList(),
                    onChanged: (value) {
...
                print('Error adding gift: $e');
              }

              await _loadGifts(); // Reload the list after insertion
              Navigator.pop(context);
            },
            child: Text('Add'),
          ),
        ],
      ),
    );
  }

...
                  print('Error updating gift: $e');
                  ScaffoldMessenger.of(context).showSnackBar(
                    SnackBar(content: Text('Failed to update gift.')),
                  );
                }
              },
              child: Text('Save'),
            ),
          ],
        );
      },
    );
  }
...
