...
                      Row(
                        mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                        crossAxisAlignment: CrossAxisAlignment.start,
                        children: [
                          Expanded(
                            child: _buildAnalyticsCard(
                              'Events Created',
                              eventsCount,
                              Icons.event,
                              onTap: () {
                                Navigator.push(
                                  context,
                                  MaterialPageRoute(
...
                ElevatedButton(
                  style: AppStyles.elevatedButtonStyle,
                  onPressed: () {
                    Navigator.pushNamed(context, '/events', arguments: widget.userId);
                  },
                  child: Text(
                    'Create Your Own Event/List',
                    style: TextStyle(fontSize: 18, color: Colors.white),
                  ),
                ),
                SizedBox(height: 20),
                // Add Friend Section
                TextField(
...
