...
                        return CircularProgressIndicator(); // Show a loader while checking
                      } else if (snapshot.hasError || !snapshot.hasData) {
                        return SizedBox(); // Hide the button if an error occurs
                      } else if (!snapshot.data!) {
                        return ElevatedButton(
                          onPressed: () => _pledgeGift(context),
                          child: Text('Pledge to Gift'),
                        );
                      } else {
                        return SizedBox(); // Hide the button for owners
                      }
                    },
                  ),
...
